--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <h1>The big random quiz of stuff</h1>
-    <ul>Hello
-        <li id = "q1">Question 1</li>
-        <li id = "q2">Question 2</li>
-        <li id = "q3">Question 3</li>
+    <!-- <ul id = questionList> this gives the list an id of questionList -->
+      <ul id = questionList>
+      <li id="q1">Question 1</li>
   </body>
 </html>
